DataBase connctionstring changed
DataBase connctionstring changed

--- a/RealtyAgencyMLS.Admin/appsettings.json
+++ b/RealtyAgencyMLS.Admin/appsettings.json
@@ -1,6 +1,11 @@
 {
   "ConnectionStrings": {
+    //dev
     "DefaultConnection": "server=DESKTOP-51943BB\\SQLEXPRESS;database=RealtyAgencyDB;Integrated Security=yes"
+    //local
+    //"DefaultConnection": "server=DESKTOP-51943BB\\SQLEXPRESS;database=RealtyAgencyDB;Integrated Security=yes"
+    //Production
+    //"DefaultConnection": "server=DESKTOP-51943BB\\SQLEXPRESS;database=RealtyAgencyDB;Integrated Security=yes"
 
   },
   "Logging": {
@@ -19,17 +24,17 @@
   "MailSettings": {
     "Mail": "sampleemail.chetu@gmail.com",
     "DisplayName": "TEST USER",
-    "Password": "Chetu@123",
+    "Password": "Nithin@414",
     "Host": "smtp.gmail.com",
     "EnableSsl": "true",
     "Port": 587,
     "IsTest": "true",
-    "TestEmail": "rakheshkzillo@yopmail.com"
+    "TestEmail": "RAJESH7441@YOPMAIL.COM"
   },
- 
+
   "AllowedHosts": "*",
   "email_address": "sampleemail.chetu@gmail.com",
-  "email_password": "Chetu@123"
+  "email_password": "Nithin@414"
 
 
 
