Index , Controller , Startup changed

--- a/RealtyAgencyMLS.Web/appsettings.json
+++ b/RealtyAgencyMLS.Web/appsettings.json
@@ -8,12 +8,12 @@
     //"DefaultConnection": "server=DESKTOP-51943BB\\SQLEXPRESS;database=RealtyAgencyDB;Integrated Security=yes"
 
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   },
   "MailSettings": {
     "Mail": "sampleemail.chetu@gmail.com",
@@ -25,6 +25,17 @@
     "IsTest": "true",
     "TestEmail": "RAJESH7441@YOPMAIL.COM"
   },
+  "AdminServerUrlInfo": {
+    "URL": "http://localhost:63618/"
+    //"URL": "http://therealtyagency-real-admin.chetu.com"
+    //"URL": "http://therealtyagency-real-admin.chetu.com"
+  },
+  "MLSServerUrlInfo": {
+    "BASEURL": "http://localhost:44369"
+    //"BASEURL": "http://therealtyagency.chetu.com"
+    //"BASEURL": "http://therealtyagencyqa.chetu.com"
+  },
+
 
   "AllowedHosts": "*",
   "email_address": "sampleemail.chetu@gmail.com",
